--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang=""en">
+<html lang="en">
 <head>
     <title>My Website</title>
-    <meta charset="uft-8">
+    <meta charset="utf-8">
 </head>
 <body>
-    <h1>Heading 1</h1>
 </body>
 </html>
