--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>My Website</title>
-    <meta charset="utf-8">
-</head>
-<body>
-</body>
+    <head>
+        <title>Jacqueline's Webpage</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>Jacqueline's Favorite Recipes</h1>
+    </body>
 </html>
