--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Jacqueline's Webpage</title>
+        <title>JCapstone</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Jacqueline's Favorite Recipes</h1>
+        <header>
+            <h1>Jacqueline's Favorite Recipes</h1>
+        </header>
+        <main>
+            <section>
+                <h2>Aunt Karen's Funnel Cake</h2>
+                <!--Add Recipe-->
+            </section>
+            <section>
+                <h3>Ellen's Oven Fried Rice</h3>
+                    <p> 
+                        <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50">Recipe</a>
+                    </p>
+            </section>
+        </main>
     </body>
 </html>
