--- a/Lesson/lesson-4a.html
+++ b/Lesson/lesson-4a.html
@@ -3,21 +3,26 @@
     <body>
         <!--Hello There-->
         <header>
+            <a href="#footer">Footer</a>
             <h1>Jacqueline's Website</h1>
             <h2>Mother with two sons.</h2>
-            <p>This is website about me.</p>
+            <p>This is website about me.
+               <a href="https://www.facebook.com/jackir/">J.facebook</a>
+            </p>
         </header>
-            <section>
-                <h1>Section 1</h1>
-                <p>This is a section</p>
-                <ol>
-                    <li>klemtu</li>
-                    <li>West Coast</li>
-                    <li>Home of the Spirit Bear</li>
-                </ol>
-            </section>
-            <footer>
-                <p>Website Made by Jacqueline</p>
-            </footer>
+        <section>
+            <h1>Section 1</h1>
+            <p>This is a section</p>
+            <ol>
+                <li>klemtu</li>
+                <img src="images/inside passage.jpg" alt="photo of inside passage" width="400" height="300"/>
+                <a href="https://klemtu.com" target="_blank">Klemtu</a>
+                <li>West Coast</li>
+                <li>Home of the Spirit Bear</li>
+            </ol>
+        </section>
+        <footer id="footer">
+            <p>Website Made by Jacqueline</p>
+        </footer>
     </body>
 </html>
