--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
         <main>
             <section>
                 <h2>Aunt Karen's Funnel Cake</h2>
+                <p>Ingredients</p>
+                <ol>
+                    <li>1 quart vegtable oil for frying, or as needed</li>
+                    <li>1 1/2 cups milk</li>
+                    <li>2 large eggs</li>
+                    <li>2 cups all-purpose flour</li>
+                    <li>1 teaspoon baking powered</li>
+                    <li>1/2 teaspoon ground cinnamon</li>
+                    <li>1/2 teaspoon salt</li>
+                    <li>3/4 cup powdered sugar</li>
+                </ol>
+                <p>Directions:
+                    1. Heat oil to 375 degrees F (190 degree C) in a heavy skillet or deep fryer.
+                    2. Beat milk and eggs together in a large bowl. Combine flour, baking powder, cinnamon, and salt in a seperate bowl; stir into egg mixture until smooth.
+                    3. Use your finger to cover the funnel hole; pour about 1 cup of batter into the funnel.    Starting in the centre of the skillet, remove your finger and move the funnel in a swirling motion to make a 6- or 7- inch round. Fry in the hot oil until bottom is golden brown; flip and continue cooking until golden brown all over, about 1 minute per sid. Drain on paper towels. Continue cooking remaining batter.
+                    4. Sprinkle with powdered sugar and serve warm.
+                    Funnel cakes are best fresh but can be kept in refridgerator for 3 days or frozen for upto 3 months. Reheat the cover with powdered sugar.
+                </p>
+
                 <!--Add Recipe-->
             </section>
             <section>
