--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
                     <li>1/2 teaspoon salt</li>
                     <li>3/4 cup powdered sugar</li>
                 </ol>
-                <p>Directions:
-                    1. Heat oil to 375 degrees F (190 degree C) in a heavy skillet or deep fryer.
-                    2. Beat milk and eggs together in a large bowl. Combine flour, baking powder, cinnamon, and salt in a seperate bowl; stir into egg mixture until smooth.
+                <p>Directions:</p>
+                    <p>1. Heat oil to 375 degrees F (190 degree C) in a heavy skillet or deep fryer.
                     3. Use your finger to cover the funnel hole; pour about 1 cup of batter into the funnel.    Starting in the centre of the skillet, remove your finger and move the funnel in a swirling motion to make a 6- or 7- inch round. Fry in the hot oil until bottom is golden brown; flip and continue cooking until golden brown all over, about 1 minute per sid. Drain on paper towels. Continue cooking remaining batter.
                     4. Sprinkle with powdered sugar and serve warm.
+                    2. Beat milk and eggs together in a large bowl. Combine flour, baking powder, cinnamon, and salt in a seperate bowl; stir into egg mixture until smooth.
                     Funnel cakes are best fresh but can be kept in refridgerator for 3 days or frozen for upto 3 months. Reheat the cover with powdered sugar.
+                    </p>
                 </p>
 
                 <!--Add Recipe-->
