--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     2. Beat milk and eggs together in a large bowl. Combine flour, baking powder, cinnamon, and salt in a seperate bowl; stir into egg mixture until smooth.
                     Funnel cakes are best fresh but can be kept in refridgerator for 3 days or frozen for upto 3 months. Reheat the cover with powdered sugar.
                     </p>
-                    <img src="images/joe-zlomek-AId0qBVBLKA-unsplash.jpg" alt="photo-of-funnel-cake">
+                    <img src="images/joe-zlomek-AId0qBVBLKA-unsplash.jpg" alt="photo-of-funnel-cake" width="400" height="300"/>
                 </p>
 
                 <!--Add Recipe-->
