--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <li>3/4 cup powdered sugar</li>
                 </ol>
                 <p>Directions:</p>
-                    <p>1. Heat oil to 375 degrees F (190 degree C) in a heavy skillet or deep fryer.
-                       2. Beat milk and eggs together in a large bowl. Combine flour, baking powder, cinnamon, and salt in a seperate bowl; stir into egg mixture until smooth. .
-                       3. Use your finger to cover the funnel hole; pour about 1 cup of batter into the funnel.    Starting in the centre of the skillet, remove your finger and move the funnel in a swirling motion to make a 6- or 7- inch round. Fry in the hot oil until bottom is golden brown; flip and continue cooking until golden brown all over, about 1 minute per sid. Drain on paper towels. Continue cooking remaining batter.
-                       4. Sprinkle with powdered sugar and serve warm.
-                    
-                    Funnel cakes are best fresh but can be kept in refridgerator for 3 days or frozen for upto 3 months. Reheat the cover with powdered sugar.
+                    <p>
+                        1.	Heat oil to 375 degrees F (190 degrees C) in a heavy skillet or deep fryer
+                        2.	Beat milk and eggs together in a large bowl. Combine flour, baking powder, cinnamon, and salt in a separate bowl; stir into egg mixture until smooth.
+                        3.	Use your finger to cover the funnel hole; pour about 1 cup of batter into the funnel. Starting in the center of the skillet, remove your finger and move the funnel in a swirling motion to make a 6- or 7-inch round. Fry in hot oil until bottom is golden brown; flip and continue cooking until golden brown all over, about 1 minute per side. Drain on paper towels. Continue cooking remaining batter. 
+                        4.	Sprinkle with powdered sugar and serve warm.
+                        Funnel cakes are best fresh but can be kept in refrigerator for 3 days or frozen for up to 3 months. Reheat then cover with powdered sugar.
                     </p>
                     <img src="images/joe-zlomek-AId0qBVBLKA-unsplash.jpg" alt="photo-of-funnel-cake" width="400" height="300"/>
                 </p>
