--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>JCapstone</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">  
     </head>
     <body>
         <header>
@@ -31,12 +32,11 @@
                         Funnel cakes are best fresh but can be kept in refrigerator for 3 days or frozen for up to 3 months. Reheat then cover with powdered sugar.
                     </p>
                     <img src="images/joe-zlomek-AId0qBVBLKA-unsplash.jpg" alt="photo-of-funnel-cake" width="400" height="300"/>
-                </p>
-
-                <!--Add Recipe-->
+                    </p>
+                    <!--Add Recipe-->
             </section>
             <section>
-                <h3>Ellen's Oven Fried Rice</h3>
+                <h3>Oven Fried Rice</h3>
                     <p> 
                         <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50">Recipe</a>
                     </p>
