--- a/lesson-4a.html
+++ b/lesson-4a.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Lesson</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="dtyle.css">
+    </head>
+
     <body>
         <!--Hello There-->
         <header>
