--- a/lesson-4a.html
+++ b/lesson-4a.html
@@ -3,7 +3,7 @@
     <head>
         <title>Lesson</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="dtyle.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
