--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
                     <p> 
                         <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50">Recipe</a>
                     </p>
+                    <!--add image-->
+            </section>
+            <section>
+                <h3>Sweet Potato Casserole</h3>
+                <p>Ingredients</p>
+                    <ul>
+                        <li>2lbs(1 very large) sweet potato or 2 large cans of sweet potato (or Yams)</li>
+                        <li>3 Tablespoons butter</li>
+                        <li>3 Tablespoons Dark corn syrup (Rogers)</li>
+                        <li>3 Tablesppons brown sugar</li>
+                        <li>1 tablespoon cinnamon</li>
+                        <li>2 Teaspoons ground cloves</li>
+                        <li>3/4 Bag marshmellows</li>
+                    </ul>
+                <p>Directions:</p>
+                    <ol>
+                        <li>If using fresh sweet potato peel and cut into 2 inch cubes, cook. If boiling drain. Can also be steamed in microwave. If using canned sweet potatoes, drain well.</li>
+                        <li>Preheat oven to 350°F.</li>
+                        <li>Spread cooked/canned drained sweet potatoes in a 9x13 baking pan</li>
+                        <li>Cut butter into slices and put on top of potatoes</li>
+                        <li>Pour corn syrup over potatoes </li>
+                        <li>Sprinkle brown sugar, cinnamon and cloves</li>
+                        <li>Spread marshmallows over top</li>
+                        <li>Cook in oven 30 minutes until marshmallows are golden brown</li>
+                    </ol>
             </section>
         </main>
     </body>
