target _blank update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section>
                 <h3>Oven Fried Rice</h3>
                     <p> 
-                        <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50">Recipe</a>
+                        <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50" target="_blank">Recipe</a>
                     </p>
                     <!--add image-->
             </section>
@@ -64,6 +64,7 @@
                         <li>Spread marshmallows over top</li>
                         <li>Cook in oven 30 minutes until marshmallows are golden brown</li>
                     </ol>
+                    <!--add image-->
             </section>
         </main>
     </body>
