--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <section>
                 <h3>Oven Fried Rice</h3>
                     <p> 
+                        <img src="images/Oven-Fried-Rice-in-casserole-dish-1158x868.webp" width="400" height="300"/>
                         <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50" target="_blank">Recipe</a>
                     </p>
                     <!--add image-->
