photo provider shout out

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                         Funnel cakes are best fresh but can be kept in refrigerator for 3 days or frozen for up to 3 months. Reheat then cover with powdered sugar.
                     </ol>
                     <img src="images/joe-zlomek-AId0qBVBLKA-unsplash.jpg" alt="photo-of-funnel-cake" width="400" height="300"/>
+                    <p>
+                        Photo by <a href="https://unsplash.com/@sanatoga?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Joe Zlomek</a> on <a href="https://unsplash.com/photos/a-close-up-of-food-cooking-on-a-grill-AId0qBVBLKA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+                    </p>
                     <!--Add Recipe-->
             </section>
             <section>
