--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </section>
             <section>
                 <h3>Sweet Potato Casserole</h3>
-                <p>Ingredients</p>
+                <img src="images/Sweet-Potato-Casserole-10.jpg" width="400" height="300"/>                <p>Ingredients</p>
                     <ul>
                         <li>2lbs(1 very large) sweet potato or 2 large cans of sweet potato (or Yams)</li>
                         <li>3 Tablespoons butter</li>
