--- a/index.html
+++ b/index.html
@@ -41,23 +41,24 @@
                 <h3>Oven Fried Rice</h3>
                     <p> 
                         <img src="images/Oven-Fried-Rice-in-casserole-dish-1158x868.webp" width="400" height="300"/>
-                        <p>Photo & Recipe Courtesy ornabakes.com</p>
+                        <p>Photo & Recipe Courtesy https://ornabakes.com/</p>
                         <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50" target="_blank">Recipe</a>
                     </p>
                     <!--add image-->
             </section>
             <section>
                 <h3>Sweet Potato Casserole</h3>
-                <img src="images/Sweet-Potato-Casserole-10.jpg" width="400" height="300"/>                <p>Ingredients</p>
-                    <ul>
-                        <li>2lbs(1 very large) sweet potato or 2 large cans of sweet potato (or Yams)</li>
-                        <li>3 Tablespoons butter</li>
-                        <li>3 Tablespoons Dark corn syrup (Rogers)</li>
-                        <li>3 Tablesppons brown sugar</li>
-                        <li>1 tablespoon cinnamon</li>
-                        <li>2 Teaspoons ground cloves</li>
-                        <li>3/4 Bag marshmellows</li>
-                    </ul>
+                    <img src="images/Sweet-Potato-Casserole-10.jpg" width="400" height="300"/>
+                    <p>Photo courtesty https://www.savingdessert.com/sweet-potato-casserole/ </p>                <p>Ingredients</p>
+                        <ul>
+                            <li>2lbs(1 very large) sweet potato or 2 large cans of sweet potato (or Yams)</li>
+                            <li>3 Tablespoons butter</li>
+                            <li>3 Tablespoons Dark corn syrup (Rogers)</li>
+                            <li>3 Tablesppons brown sugar</li>
+                            <li>1 tablespoon cinnamon</li>
+                            <li>2 Teaspoons ground cloves</li>
+                            <li>3/4 Bag marshmellows</li>
+                        </ul>
                 <p>Directions:</p>
                     <ol>
                         <li>If using fresh sweet potato peel and cut into 2 inch cubes, cook. If boiling drain. Can also be steamed in microwave. If using canned sweet potatoes, drain well.</li>
