--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>JCapstone</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css"> 
-        <link font-family: 'Shadows Into Light', cursive;
+        <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </head>
-    
+
     <body>
         <header>
             <h1>Jacqueline's Favorite Recipes</h1>
