new recipe image

--- a/index.html
+++ b/index.html
@@ -62,17 +62,46 @@
                             <li>3/4 Bag marshmellows</li>
                         </ul>
                 <p>Directions:</p>
-                    <ol>
-                        <li>If using fresh sweet potato peel and cut into 2 inch cubes, cook. If boiling drain. Can also be steamed in microwave. If using canned sweet potatoes, drain well.</li>
-                        <li>Preheat oven to 350°F.</li>
-                        <li>Spread cooked/canned drained sweet potatoes in a 9x13 baking pan</li>
-                        <li>Cut butter into slices and put on top of potatoes</li>
-                        <li>Pour corn syrup over potatoes </li>
-                        <li>Sprinkle brown sugar, cinnamon and cloves</li>
-                        <li>Spread marshmallows over top</li>
-                        <li>Cook in oven 30 minutes until marshmallows are golden brown</li>
-                    </ol>
+                        <ol>
+                            <li>If using fresh sweet potato peel and cut into 2 inch cubes, cook. If boiling drain. Can also be steamed in microwave. If using canned sweet potatoes, drain well.</li>
+                            <li>Preheat oven to 350°F.</li>
+                            <li>Spread cooked/canned drained sweet potatoes in a 9x13 baking pan</li>
+                            <li>Cut butter into slices and put on top of potatoes</li>
+                            <li>Pour corn syrup over potatoes </li>
+                            <li>Sprinkle brown sugar, cinnamon and cloves</li>
+                            <li>Spread marshmallows over top</li>
+                            <li>Cook in oven 30 minutes until marshmallows are golden brown</li>
+                        </ol>
                     <!--add image-->
+            </section>
+            <section>
+                <h4>Corn Beef Hash</h4>
+                <img src="images/corn beef hash.jpg" width="400" height="300"/>
+                <p>Photo courtesy http://www.thesouthinmymouth.com/2012/01/24/homemade-corned-beef-hash/</p>
+                    <p>Ingredients:</p>
+                        <ul>
+                            <li>4 potatoes, peeled and diced</li>
+                            <li>1/2 head cabbage, chopped</li>
+                            <li>2 carrots, peeled and diced</li>
+                            <li>6 thick bacon slices, cut in 1/2-inch pieces</li>
+                            <li>1 can corn beef, crumbled</li>
+                            <li>2 tablespoons olive oil</li>
+                            <li>salt and pepper, to taste</li>
+                            <li>1 teaspoon dried thyme, optional</li>
+                        </ul>
+                    <p>Directions:</p>
+                        <ol>
+                            <li>Preheat oven to 375°F</li>
+                            <li>In a large skillet, heat the olive oil over medium-high heat.</li>
+                            <li>Add the potatoes, cabbage, carrots, and bacon. Cook, stirring occasionally, until the vegetables are tender and the bacon is crisp, about 8-10 minutes.</li>
+                            <li>Add the canned corn beef and stir to combine.</li>
+                            <li>Transfer the mixture to a 9x13-inch baking dish.</li>
+                            <li>Sprinkle with salt, pepper, and thyme, if desired.</li>
+                            <li>Bake for 25-30 minutes, or until the top is golden brown and the vegetables are tender.</li>
+                            <li>Enjoy!</li>
+                        </ol>
+
+
             </section>
         </main>
     </body>
