--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </section>
                 <footer>
                     <p>Coded by Jacqueline.</p>
-                    <p>email: jacmrobs76@outlook.com</p>
+                    <p>Email: jacmrobs76@outlook.com</p>
                 </footer>
         </main>
     </body>
