--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>Jacqueline's Favorite Recipes</h1>
+            <h1 class="title"> Jacqueline's Favorite Recipes</h1>
         </header>
         <main>
             <section>
@@ -37,6 +37,7 @@
                         Photo by <a href="https://unsplash.com/@sanatoga?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Joe Zlomek</a> on <a href="https://unsplash.com/photos/a-close-up-of-food-cooking-on-a-grill-AId0qBVBLKA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
                     </p>
             </section>
+            <br>
             <section>
                 <h3>Oven Fried Rice</h3>
                     <p> 
@@ -45,10 +46,11 @@
                         <a href="https://ornabakes.com/oven-fried-rice-super-easy-crowd-pleaser/?fbclid=IwAR0mczYlI1-CfKRsEoGfxhsrgSwtOPz-7XKsjW2lXVe9lZBf20XfYrY4h50" target="_blank">Go-to-Recipe</a>
                     </p>
             </section>
+            <br>
             <section>
                 <h4>Sweet Potato Casserole</h4>
                     <img src="images/Sweet-Potato-Casserole-10.jpg" alt="photo-of-sweet-potato-casserole" width="400" height="300"/>
-                <p>Photo courtesty <a href="https://www.savingdessert.com/sweet-potato-casserole/">Saving-dessert</a>  </p>  
+                <p>Photo courtesty <a href="https://www.savingdessert.com/sweet-potato-casserole/">Saving-dessert</a></p>  
                 <p>Ingredients:</p>
                     <ul>
                         <li>2lbs (1 very large) sweet potato or 2 large cans of sweet potato (or yams)</li>
@@ -71,6 +73,7 @@
                             <li>Cook in oven 30 minutes until marshmallows are golden brown</li>
                         </ol>
             </section>
+            <br>
             <section>
                 <h5>Corn Beef Hash</h5>
                 <img src="images/corn beef hash.jpg" alt="photo-of-corn-beef-hash" width="400" height="300"/>
@@ -98,6 +101,7 @@
                         <li>Enjoy!</li>
                     </ol>
             </section>
+            <br>
                 <footer>
                     <p>Coded by Jacqueline.</p>
                     <p>Email: jacmrobs76@outlook.com</p>
