--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><strong>Sprinkle with powdered sugar and serve warm.</strong></li>
                         Funnel cakes are best fresh but can be kept in refrigerator for 3 days or frozen for up to 3 months. Reheat then cover with powdered sugar.
                     </ol>
-                    <center><img src="images/joe-zlomek-AId0qBVBLKA-unsplash.jpg" alt="photo-of-funnel-cake" width="400" height="300"/></center>
+                    <img src="images/joe-zlomek-AId0qBVBLKA-unsplash.jpg" alt="photo-of-funnel-cake" class="image-center" width="400"/>
                     <p>
                         Photo by <a href="https://unsplash.com/@sanatoga?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Joe Zlomek</a> on <a href="https://unsplash.com/photos/a-close-up-of-food-cooking-on-a-grill-AId0qBVBLKA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
                     </p>
@@ -49,7 +49,7 @@
             <br>
             <section>
                 <h4>Sweet Potato Casserole</h4>
-                    <center><img src="images/Sweet-Potato-Casserole-10.jpg" alt="Photo-of-sweet-potato-casserole-10" width="400" height="300"/></center>
+                    <img src="images/Sweet-Potato-Casserole-10.jpg" alt="Photo-of-sweet-potato-casserole-10" class="image-center" width="400"/>
                 <p>Photo courtesty <a href="https://www.savingdessert.com/sweet-potato-casserole/">Saving-dessert</a></p>  
                 <p>Ingredients:</p>
                     <ul class="ingredient-2">
